# bioreport

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  composer.json  docker-compose.dev.yml  docker-compose.yml  phpunit.xml
.cursor/: execution.md  rules.md  system.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml   laravel.yml
app/Models/: Account.php  DiagnosticReport.php  Observation.php  PasswordResetToken.php  PdfJob.php  RefreshToken.php  StandardBiomarker.php  UploadedDocument.php  User.php
bootstrap/: app.php
config/: app.php  auth_tokens.php  database.php  filesystems.php  hashing.php  scramble.php  uploaded_documents.php
docker/nginx/: Dockerfile  (+1 more)
docs/: self-host.md
frontend/: README.md
routes/: api.php  web.php
scripts/: fetch-frontend.sh  generate-jwt-secret.php  pre-push
tests/: RefreshMongoDatabase.php
worker/: .coverage  .env.example  README.md  pyproject.toml
worker/app/: config.py  db.py  exceptions.py  job_locking.py  main.py  ml_pipeline.py  models.py  normalizer.py  pdf_reader.py  processor.py  repository.py
worker/pdf_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
worker/tests/: conftest.py
worker/tests/integration/: test_processor_e2e.py
worker/tests/unit/: test_db.py  test_job_locking.py  test_main.py  test_ml_pipeline.py  test_normalizer.py  test_pdf_reader.py  test_processor_path.py  test_processor_process_one.py  test_processor_retry.py  test_processor_run_loop.py  test_repository.py
(+136 files in other folders)
