[project]
name = "pdf-worker"
version = "0.1.0"
description = "PDF processing worker for ML extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "pdfplumber>=0.11",
    "spacy>=3.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "testcontainers>=4.0",
    "ruff>=0.8",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117", "N806"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=95"
filterwarnings = ["ignore::DeprecationWarning"]
